2013-05-13  Dario Rodriguez <dario@artica.es>

	* operation/group/group.php,
	operation/incidents/incident_detail.php,
	include/js/integria_incident_search.js: Restored default inventory object 
	in incident creation and update.

2013-05-13  Dario Rodriguez <dario@artica.es>

	* integria_db.sql,
	godmode/grupos/configurar_grupo.php,
	godmode/grupos/lista_grupos.php: Restored default inventory object in
	groups.

2013-05-13  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Fixed several bugs with visual styles of PDF
	and HTML view.

2013-05-13  Dario Rodriguez <dario@artica.es>

	* include/functions.php: Added maintenance to priority render.
	* include/functions_graph.php: Create new function graph_incident_priority.
	* include/constants.php: Created constants for priority levels and colors.
	* include/functions_incidents.php: Updated incident statistic view and
	created several new functions for this view.

2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* index.php: develop_bypass=0

2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* include/constants.php
	  include/functions_db.php
	  include/functions_incidents.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php
	  operation/inventories/inventory_tracking: Added
	'object type', 'public' and 'incidents' to inventory tracking.

2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php
	  operation/inventories/inventory_tracking: Added
	incident affecting inventory tracking.

	* operation/inventories/inventory_incident_tracking.php: Added file.

2013-05-10  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.ql
	  include/constants.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php